test/modules/errors/code-outside-of-module-error.chpl
// my-test.chpl
writeln("X");
module M {
  writeln("hello");
}
